MT/lab4/src/main/java/antlr_gen/GrammarOfGrammars/GrammarOfGrammarsParser.java
// Generated from java-escape by ANTLR 4.11.1
package antlr_gen.GrammarOfGrammars;

import grammar.Grammar;
import grammar.Rule;
import grammar.term.Code;
import grammar.term.NonTerminal;
import grammar.term.Term;
import grammar.term.Terminal;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class GrammarOfGrammarsParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.11.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		GRAMMAR=1, START=2, RETURNS=3, TOKEN_NAME=4, RULE_NAME=5, OR=6, COLON=7, 
		SEMICOLON=8, BRACKET_OPEN=9, BRACKET_CLOSE=10, SQUARE_OPEN=11, SQUARE_CLOSE=12, 
		QUOTE=13, CODE=14, ATTRIBUTES=15, REGEXP=16, WHITESPACE=17, EPS=18;
	public static final int
		RULE_grammarOfGrammars = 0, RULE_startName = 1, RULE_grammarName = 2, 
		RULE_rules = 3, RULE_grammarRule = 4, RULE_terminalRule = 5, RULE_name = 6, 
		RULE_nonTerminalRule = 7, RULE_rightPart = 8, RULE_term = 9, RULE_synAttr = 10, 
		RULE_heritableAttr = 11;
	private static String[] makeRuleNames() {
		return new String[] {
			"grammarOfGrammars", "startName", "grammarName", "rules", "grammarRule", 
			"terminalRule", "name", "nonTerminalRule", "rightPart", "term", "synAttr", 
			"heritableAttr"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'grammar'", "'start'", "'returns'", null, null, "'|'", "':'", 
			"';'", "'{'", "'}'", "'['", "']'", "'\"'", null, null, null, null, "'eps'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "GRAMMAR", "START", "RETURNS", "TOKEN_NAME", "RULE_NAME", "OR", 
			"COLON", "SEMICOLON", "BRACKET_OPEN", "BRACKET_CLOSE", "SQUARE_OPEN", 
			"SQUARE_CLOSE", "QUOTE", "CODE", "ATTRIBUTES", "REGEXP", "WHITESPACE", 
			"EPS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "java-escape"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public GrammarOfGrammarsParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class GrammarOfGrammarsContext extends ParserRuleContext {
		public Grammar grammar;
		public GrammarNameContext grammarName;
		public StartNameContext startName;
		public GrammarNameContext grammarName() {
			return getRuleContext(GrammarNameContext.class,0);
		}
		public StartNameContext startName() {
			return getRuleContext(StartNameContext.class,0);
		}
		public RulesContext rules() {
			return getRuleContext(RulesContext.class,0);
		}
		public TerminalNode EOF() { return getToken(GrammarOfGrammarsParser.EOF, 0); }
		public GrammarOfGrammarsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_grammarOfGrammars; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarOfGrammarsListener ) ((GrammarOfGrammarsListener)listener).enterGrammarOfGrammars(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarOfGrammarsListener ) ((GrammarOfGrammarsListener)listener).exitGrammarOfGrammars(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarOfGrammarsVisitor ) return ((GrammarOfGrammarsVisitor<? extends T>)visitor).visitGrammarOfGrammars(this);
			else return visitor.visitChildren(this);
		}
	}

	public final GrammarOfGrammarsContext grammarOfGrammars() throws RecognitionException {
		GrammarOfGrammarsContext _localctx = new GrammarOfGrammarsContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_grammarOfGrammars);

		    Grammar grammar = new Grammar();
		    ((GrammarOfGrammarsContext)_localctx).grammar =  grammar;

		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(24);
			((GrammarOfGrammarsContext)_localctx).grammarName = grammarName();
			setState(25);
			((GrammarOfGrammarsContext)_localctx).startName = startName();
			setState(26);
			rules(grammar);

			        _localctx.grammar.setName(((GrammarOfGrammarsContext)_localctx).grammarName.nameGrammar);
			        _localctx.grammar.setStart(((GrammarOfGrammarsContext)_localctx).startName.nameStart);
			      
			setState(28);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StartNameContext extends ParserRuleContext {
		public String nameStart;
		public NameContext name;
		public TerminalNode START() { return getToken(GrammarOfGrammarsParser.START, 0); }
		public NameContext name() {
			return getRuleContext(NameContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(GrammarOfGrammarsParser.SEMICOLON, 0); }
		public StartNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_startName; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarOfGrammarsListener ) ((GrammarOfGrammarsListener)listener).enterStartName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarOfGrammarsListener ) ((GrammarOfGrammarsListener)listener).exitStartName(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarOfGrammarsVisitor ) return ((GrammarOfGrammarsVisitor<? extends T>)visitor).visitStartName(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StartNameContext startName() throws RecognitionException {
		StartNameContext _localctx = new StartNameContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_startName);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(30);
			match(START);
			setState(31);
			((StartNameContext)_localctx).name = name();
			setState(32);
			match(SEMICOLON);

			        ((StartNameContext)_localctx).nameStart =  (((StartNameContext)_localctx).name!=null?_input.getText(((StartNameContext)_localctx).name.start,((StartNameContext)_localctx).name.stop):null);
			    
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class GrammarNameContext extends ParserRuleContext {
		public String nameGrammar;
		public NameContext name;
		public TerminalNode GRAMMAR() { return getToken(GrammarOfGrammarsParser.GRAMMAR, 0); }
		public NameContext name() {
			return getRuleContext(NameContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(GrammarOfGrammarsParser.SEMICOLON, 0); }
		public GrammarNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_grammarName; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarOfGrammarsListener ) ((GrammarOfGrammarsListener)listener).enterGrammarName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarOfGrammarsListener ) ((GrammarOfGrammarsListener)listener).exitGrammarName(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarOfGrammarsVisitor ) return ((GrammarOfGrammarsVisitor<? extends T>)visitor).visitGrammarName(this);
			else return visitor.visitChildren(this);
		}
	}

	public final GrammarNameContext grammarName() throws RecognitionException {
		GrammarNameContext _localctx = new GrammarNameContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_grammarName);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(35);
			match(GRAMMAR);
			setState(36);
			((GrammarNameContext)_localctx).name = name();
			setState(37);
			match(SEMICOLON);

			        ((GrammarNameContext)_localctx).nameGrammar =  (((GrammarNameContext)_localctx).name!=null?_input.getText(((GrammarNameContext)_localctx).name.start,((GrammarNameContext)_localctx).name.stop):null);
			      
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class RulesContext extends ParserRuleContext {
		public Grammar grammar;
		public List<GrammarRuleContext> grammarRule() {
			return getRuleContexts(GrammarRuleContext.class);
		}
		public GrammarRuleContext grammarRule(int i) {
			return getRuleContext(GrammarRuleContext.class,i);
		}
		public RulesContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public RulesContext(ParserRuleContext parent, int invokingState, Grammar grammar) {
			super(parent, invokingState);
			this.grammar = grammar;
		}
		@Override public int getRuleIndex() { return RULE_rules; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarOfGrammarsListener ) ((GrammarOfGrammarsListener)listener).enterRules(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarOfGrammarsListener ) ((GrammarOfGrammarsListener)listener).exitRules(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarOfGrammarsVisitor ) return ((GrammarOfGrammarsVisitor<? extends T>)visitor).visitRules(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RulesContext rules(Grammar grammar) throws RecognitionException {
		RulesContext _localctx = new RulesContext(_ctx, getState(), grammar);
		enterRule(_localctx, 6, RULE_rules);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(43);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==TOKEN_NAME || _la==RULE_NAME) {
				{
				{
				setState(40);
				grammarRule(grammar);
				}
				}
				setState(45);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class GrammarRuleContext extends ParserRuleContext {
		public Grammar grammar;
		public TerminalRuleContext terminalRule() {
			return getRuleContext(TerminalRuleContext.class,0);
		}
		public NonTerminalRuleContext nonTerminalRule() {
			return getRuleContext(NonTerminalRuleContext.class,0);
		}
		public GrammarRuleContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public GrammarRuleContext(ParserRuleContext parent, int invokingState, Grammar grammar) {
			super(parent, invokingState);
			this.grammar = grammar;
		}
		@Override public int getRuleIndex() { return RULE_grammarRule; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarOfGrammarsListener ) ((GrammarOfGrammarsListener)listener).enterGrammarRule(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarOfGrammarsListener ) ((GrammarOfGrammarsListener)listener).exitGrammarRule(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarOfGrammarsVisitor ) return ((GrammarOfGrammarsVisitor<? extends T>)visitor).visitGrammarRule(this);
			else return visitor.visitChildren(this);
		}
	}

	public final GrammarRuleContext grammarRule(Grammar grammar) throws RecognitionException {
		GrammarRuleContext _localctx = new GrammarRuleContext(_ctx, getState(), grammar);
		enterRule(_localctx, 8, RULE_grammarRule);
		try {
			setState(48);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(46);
				terminalRule(grammar);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(47);
				nonTerminalRule(grammar);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TerminalRuleContext extends ParserRuleContext {
		public Grammar grammar;
		public NameContext name;
		public Token REGEXP;
		public NameContext name() {
			return getRuleContext(NameContext.class,0);
		}
		public TerminalNode COLON() { return getToken(GrammarOfGrammarsParser.COLON, 0); }
		public TerminalNode REGEXP() { return getToken(GrammarOfGrammarsParser.REGEXP, 0); }
		public TerminalNode SEMICOLON() { return getToken(GrammarOfGrammarsParser.SEMICOLON, 0); }
		public TerminalRuleContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public TerminalRuleContext(ParserRuleContext parent, int invokingState, Grammar grammar) {
			super(parent, invokingState);
			this.grammar = grammar;
		}
		@Override public int getRuleIndex() { return RULE_terminalRule; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarOfGrammarsListener ) ((GrammarOfGrammarsListener)listener).enterTerminalRule(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarOfGrammarsListener ) ((GrammarOfGrammarsListener)listener).exitTerminalRule(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarOfGrammarsVisitor ) return ((GrammarOfGrammarsVisitor<? extends T>)visitor).visitTerminalRule(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TerminalRuleContext terminalRule(Grammar grammar) throws RecognitionException {
		TerminalRuleContext _localctx = new TerminalRuleContext(_ctx, getState(), grammar);
		enterRule(_localctx, 10, RULE_terminalRule);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(50);
			((TerminalRuleContext)_localctx).name = name();
			setState(51);
			match(COLON);
			setState(52);
			((TerminalRuleContext)_localctx).REGEXP = match(REGEXP);
			setState(53);
			match(SEMICOLON);

			        _localctx.grammar.addTerminal((((TerminalRuleContext)_localctx).name!=null?_input.getText(((TerminalRuleContext)_localctx).name.start,((TerminalRuleContext)_localctx).name.stop):null), (((TerminalRuleContext)_localctx).REGEXP!=null?((TerminalRuleContext)_localctx).REGEXP.getText():null).substring(1, (((TerminalRuleContext)_localctx).REGEXP!=null?((TerminalRuleContext)_localctx).REGEXP.getText():null).length() - 1));
			      
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class NameContext extends ParserRuleContext {
		public TerminalNode RULE_NAME() { return getToken(GrammarOfGrammarsParser.RULE_NAME, 0); }
		public TerminalNode TOKEN_NAME() { return getToken(GrammarOfGrammarsParser.TOKEN_NAME, 0); }
		public NameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_name; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarOfGrammarsListener ) ((GrammarOfGrammarsListener)listener).enterName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarOfGrammarsListener ) ((GrammarOfGrammarsListener)listener).exitName(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarOfGrammarsVisitor ) return ((GrammarOfGrammarsVisitor<? extends T>)visitor).visitName(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NameContext name() throws RecognitionException {
		NameContext _localctx = new NameContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_name);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(56);
			_la = _input.LA(1);
			if ( !(_la==TOKEN_NAME || _la==RULE_NAME) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class NonTerminalRuleContext extends ParserRuleContext {
		public Grammar grammar;
		public NameContext name;
		public HeritableAttrContext heritableAttr;
		public SynAttrContext synAttr;
		public NameContext name() {
			return getRuleContext(NameContext.class,0);
		}
		public TerminalNode COLON() { return getToken(GrammarOfGrammarsParser.COLON, 0); }
		public List<RightPartContext> rightPart() {
			return getRuleContexts(RightPartContext.class);
		}
		public RightPartContext rightPart(int i) {
			return getRuleContext(RightPartContext.class,i);
		}
		public TerminalNode SEMICOLON() { return getToken(GrammarOfGrammarsParser.SEMICOLON, 0); }
		public HeritableAttrContext heritableAttr() {
			return getRuleContext(HeritableAttrContext.class,0);
		}
		public SynAttrContext synAttr() {
			return getRuleContext(SynAttrContext.class,0);
		}
		public List<TerminalNode> OR() { return getTokens(GrammarOfGrammarsParser.OR); }
		public TerminalNode OR(int i) {
			return getToken(GrammarOfGrammarsParser.OR, i);
		}
		public NonTerminalRuleContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public NonTerminalRuleContext(ParserRuleContext parent, int invokingState, Grammar grammar) {
			super(parent, invokingState);
			this.grammar = grammar;
		}
		@Override public int getRuleIndex() { return RULE_nonTerminalRule; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarOfGrammarsListener ) ((GrammarOfGrammarsListener)listener).enterNonTerminalRule(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarOfGrammarsListener ) ((GrammarOfGrammarsListener)listener).exitNonTerminalRule(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarOfGrammarsVisitor ) return ((GrammarOfGrammarsVisitor<? extends T>)visitor).visitNonTerminalRule(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NonTerminalRuleContext nonTerminalRule(Grammar grammar) throws RecognitionException {
		NonTerminalRuleContext _localctx = new NonTerminalRuleContext(_ctx, getState(), grammar);
		enterRule(_localctx, 14, RULE_nonTerminalRule);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(58);
			((NonTerminalRuleContext)_localctx).name = name();
			setState(60);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ATTRIBUTES) {
				{
				setState(59);
				((NonTerminalRuleContext)_localctx).heritableAttr = heritableAttr();
				}
			}

			setState(63);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==RETURNS) {
				{
				setState(62);
				((NonTerminalRuleContext)_localctx).synAttr = synAttr();
				}
			}

			setState(65);
			match(COLON);
			setState(66);
			rightPart(grammar, new NonTerminal((((NonTerminalRuleContext)_localctx).name!=null?_input.getText(((NonTerminalRuleContext)_localctx).name.start,((NonTerminalRuleContext)_localctx).name.stop):null)));
			setState(71);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==OR) {
				{
				{
				setState(67);
				match(OR);
				setState(68);
				rightPart(grammar, new NonTerminal((((NonTerminalRuleContext)_localctx).name!=null?_input.getText(((NonTerminalRuleContext)_localctx).name.start,((NonTerminalRuleContext)_localctx).name.stop):null)));
				}
				}
				setState(73);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(74);
			match(SEMICOLON);

			        _localctx.grammar.addNonTerminal((((NonTerminalRuleContext)_localctx).name!=null?_input.getText(((NonTerminalRuleContext)_localctx).name.start,((NonTerminalRuleContext)_localctx).name.stop):null));
			        try {
			            _localctx.grammar.addHeritableAttrsSignature((((NonTerminalRuleContext)_localctx).name!=null?_input.getText(((NonTerminalRuleContext)_localctx).name.start,((NonTerminalRuleContext)_localctx).name.stop):null), ((NonTerminalRuleContext)_localctx).heritableAttr.attributes);
			        } catch (NullPointerException ignored) {

			        }
			        try {
			            String[] attrsArray = ((NonTerminalRuleContext)_localctx).synAttr.attributes.split(",");
			            StringBuilder attrs = new StringBuilder();
			            for (String attr : attrsArray) {
			                attrs.append("public ").append(attr).append(";\n");
			            }
			            _localctx.grammar.addSynAttrsSignature((((NonTerminalRuleContext)_localctx).name!=null?_input.getText(((NonTerminalRuleContext)_localctx).name.start,((NonTerminalRuleContext)_localctx).name.stop):null), attrs.toString());
			        } catch (NullPointerException ignored) {

			        }
			    
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class RightPartContext extends ParserRuleContext {
		public Grammar grammar;
		public NonTerminal nT;
		public TermContext term;
		public List<TermContext> term() {
			return getRuleContexts(TermContext.class);
		}
		public TermContext term(int i) {
			return getRuleContext(TermContext.class,i);
		}
		public RightPartContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public RightPartContext(ParserRuleContext parent, int invokingState, Grammar grammar, NonTerminal nT) {
			super(parent, invokingState);
			this.grammar = grammar;
			this.nT = nT;
		}
		@Override public int getRuleIndex() { return RULE_rightPart; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarOfGrammarsListener ) ((GrammarOfGrammarsListener)listener).enterRightPart(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarOfGrammarsListener ) ((GrammarOfGrammarsListener)listener).exitRightPart(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarOfGrammarsVisitor ) return ((GrammarOfGrammarsVisitor<? extends T>)visitor).visitRightPart(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RightPartContext rightPart(Grammar grammar,NonTerminal nT) throws RecognitionException {
		RightPartContext _localctx = new RightPartContext(_ctx, getState(), grammar, nT);
		enterRule(_localctx, 16, RULE_rightPart);

		    List<Term> rightPart = new ArrayList<>();

		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(80); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(77);
				((RightPartContext)_localctx).term = term();

				        rightPart.add(((RightPartContext)_localctx).term.t);
				      
				}
				}
				setState(82); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( ((_la) & ~0x3f) == 0 && ((1L << _la) & 16432L) != 0 );

			        _localctx.grammar.addRule(_localctx.nT, new Rule(_localctx.nT, rightPart));
			      
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TermContext extends ParserRuleContext {
		public Term t;
		public Token RULE_NAME;
		public HeritableAttrContext heritableAttr;
		public Token TOKEN_NAME;
		public Token CODE;
		public TerminalNode RULE_NAME() { return getToken(GrammarOfGrammarsParser.RULE_NAME, 0); }
		public HeritableAttrContext heritableAttr() {
			return getRuleContext(HeritableAttrContext.class,0);
		}
		public TerminalNode TOKEN_NAME() { return getToken(GrammarOfGrammarsParser.TOKEN_NAME, 0); }
		public TerminalNode CODE() { return getToken(GrammarOfGrammarsParser.CODE, 0); }
		public TermContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_term; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarOfGrammarsListener ) ((GrammarOfGrammarsListener)listener).enterTerm(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarOfGrammarsListener ) ((GrammarOfGrammarsListener)listener).exitTerm(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarOfGrammarsVisitor ) return ((GrammarOfGrammarsVisitor<? extends T>)visitor).visitTerm(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TermContext term() throws RecognitionException {
		TermContext _localctx = new TermContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_term);
		int _la;
		try {
			setState(95);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case RULE_NAME:
				enterOuterAlt(_localctx, 1);
				{
				setState(86);
				((TermContext)_localctx).RULE_NAME = match(RULE_NAME);
				setState(88);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==ATTRIBUTES) {
					{
					setState(87);
					((TermContext)_localctx).heritableAttr = heritableAttr();
					}
				}


				        try {
				            ((TermContext)_localctx).t =  new NonTerminal((((TermContext)_localctx).RULE_NAME!=null?((TermContext)_localctx).RULE_NAME.getText():null), ((TermContext)_localctx).heritableAttr.attributes);
				        } catch (NullPointerException ignored) {
